# scratch

./: .gitignore  README.org  a.html  acm.el  search.json
arduino/: 7021.ino  read.ino  test.ino
autoencoder/: README.org
boost/: CMakeLists.txt  filesystem.cpp
causal/: README.org  test-ccn.R  test-icp.R
clang/: CMakeLists.txt  LoopConvert.cpp  README.org  ast.cpp  cmakelist.back.txt  token.cpp
clang-playground/: CMakeLists.txt  README.org  b.c  play.cpp  test.c
clojure/: a.clj  hello.alda
ctest/: CMakeLists.txt
ctest/src/: sqr.h
ctest/test/: CMakeLists.txt  test.cpp
deeplearning/: pytorch_test.py  pytorch_transfer.py  tensorflow_test.py
deeplearning/adv/: mycw.py
deeplearning/aiscm/: test.scm
deeplearning/anti-rouge/: main.py
deeplearning/keras/: addition.py  embedding.py  mnist.py
deeplearning/pytorch/: transformer.py
deeplearning/tensorflow/: a.py  gan.py  gan2.py  gan3.py  proto.py  record.py  tensorflow_test.py
gradle/RCFReader/: build.gradle
gradle/RCFReader/src/main/java/: RCFReader.java
haskell/scheme/: Main.hs  stdlib.scm
latex/: .gitignore  a.tex  bug-sig.tex  circuit.tex  compute-1.tex  compute-2.tex  compute.tex  dd.tex  fig1.tex  fig2.tex  goal.tex  prelude.tex  table.tex
mendeley/: README.org  a.rkt  cmd.rkt  main.rkt
numpy/: test.py
python/: lemma.py  scikit.py  test_cuda.py
racket/: a.rkt  b.rkt  generic.rkt  img.rkt  world.rkt
racket/music/: dl.rkt
racket/school19/: exercise-8.rkt  exercise1.rkt  exercise2.rkt  shell.rkt
racket/school19/pfsh/: five.rkt  main.rkt  pfsh1.rkt  pfsh2.rkt  pfsh5.rkt  use-five.rkt  use-pfsh.rkt  use-pfsh2.rkt  use-pfsh5.rkt
racket/school19/regexp/: solution1-test.rkt  solution1.rkt
racket/school19/stlc/: a.rkt  stlc.rkt  test.rkt  test2.rkt
racket/yacc/: lexer.rkt
remarkable/: .gitignore  README.org  remarkable.rkt
streaming/: camera.py  test.html
streaming/templates/: index.html  playback.html
tssop/: README.org  gen.rkt
z3-minesweeper/: README.org  solve.py
